--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>React image list</title>
     <link rel="stylesheet" href="./dist/react-image-list.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react-with-addons.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script> -->
   </head>
   <body>
