use react transform & up to 0.14

--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
   <head>
     <title>React image list</title>
     <link rel="stylesheet" href="./dist/react-image-list.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react-with-addons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react-with-addons.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script> -->
   </head>
   <body>
     <div id="root">
     </div>
   </body>
-  <script src="/static/test.js"></script>
-  <script>
-
-    </script>
+  <script src="/static/bundle.js"></script>
 </html>
