add server static

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html>
   <head>
     <title>React image list</title>
-    <link rel="stylesheet" href="./dist/react-image-list.css">
+    <link rel="stylesheet" href="/static/react-image-list.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react-with-addons.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script> -->
   </head>
   <body>
-    <div id="root">
+    <div class="container">
+      <div id="root">
+      </div>      
     </div>
   </body>
   <script src="/static/bundle.js"></script>
 </html>
+  
