--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="gh-pages/skull.css">
   <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="/dist/react-image-list.css">
+  <link rel="stylesheet" href="dist/react-image-list.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react-with-addons.js"></script>
 </head>
 <body>
@@ -69,5 +69,5 @@
   </footer>
 
 </body>
-<script src="/dist/bundle.js"></script>
+<script src="dist/bundle.js"></script>
 </html>
